# rpg-player

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  actor_tester.py  actor_tester2.py  agent.py  app.py  audio_player.py  audio_transcriber.py  basic_voice_actor.py  basic_voice_actor_test.py  chat_message.py  check-streaming.py  config.json  config.py  config.toml  echo_voice_actor.py  elevenlabs_actor_test.py  elevenlabs_voice_actor.py  main.py  manual_audio_test.py  narration_screen.py  openai_actor_tester.py  openai_voice_actor.py  piper_actor_tester.py  piper_voice_actor.py  pyproject.toml  requirements.txt  state_machine.py  summarise_session.py  voice_actor.py
docs/: structure.md
prompts/: bleb.md  fizzwick.md  garry.md  grindle.md  prefix.md  seraphine.md  suffix.md  vex.md
scripts/: actor_tester.py  basic_voice_actor_test.py  check_streaming.py  elevenlabs_actor_test.py  manual_audio_test.py  openai_actor_tester.py  piper_actor_tester.py
src/rpg_player/: actor_tester.py  agent.py  app.py  audio_recorder.py  audio_transcriber.py  basic_voice_actor.py  basic_voice_actor_test.py  chat_message.py  config.py  elevenlabs_actor_test.py  elevenlabs_voice_actor.py  manual_audio_test.py  message_transfomer.py  narration_screen.py  openai_actor_tester.py  openai_voice_actor.py  piper_actor_tester.py  piper_voice_actor.py  prompt_parser.py  standby.tcss  state_machine.py  summarise_session.py  token_counter.py  voice_actor.py
tests/: conftest.py  test_audio_player.py  test_audio_transcriber.py  test_config.py  test_piper.py
