[project]
name = "rpg-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.99.9",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]
