[project]
name = "rpg-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.15.0",
    "jinja2>=3.1.6",
    "openai>=1.99.9",
    "piper-tts>=1.3.0",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "textual>=5.3.0",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-bugbear>=24.12.12",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "textual-dev>=1.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
